# NAAC

./: README.md  install.sh  pyproject.toml  requirements.txt
ressources/: naac_conf.yaml
scripts/: functions.sh  venv-activate.sh
src/: cli.py
src/i18n/en/LC_MESSAGES/: messages.po
src/misc/: configuration.py  i18n.py  theme.py  ui.py  util.py
