[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "NAAC"
description = "Netbox As A Code"
authors = [{ name = "Jérôme Quintard", email = "jquintard@yeraz.fr"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[project.scripts]
cli = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]